--- a/index.html
+++ b/index.html
@@ -8,18 +8,12 @@
     <script type="text/javascript" src="./script.js" defer></script>
 </head>
 <body>
-    <table>
+    <table class="table">
         <tr>
             <th>Book Name</th>
             <th>Author</th>
             <th>No of Pages</th>
             <th>Read</th>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
         </tr>
     </table>
 </body>
