Add a basic form for the users input.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
             <th>Read</th>
         </tr>
     </table>
+    <form>
+        <label for="book_name">Book Name</label>
+        <input type="text" id="book_name"></input>
+        <label for="author">Author</label>
+        <input type="text" id="author"></input>
+        <label for="pages">No of Pages</label>
+        <input type="text" id="pages"></input>
+        <label for="read">Read?</label>
+        <input type="text" id="read"></input>
+        <button class="submit_button">Submit</button>
+    </form>
 </body>
 </html>
