Add an event listener for the submit button that will add the input fields to a new row in the table. Modified the addBookToTable function so that it only adds the latest book. Moved the examples to the HTML.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
             <th>No of Pages</th>
             <th>Read</th>
         </tr>
+        <tr>
+            <td>The Hobbit</td>
+            <td>J.R.R Tolkein</td>
+            <td>395</td>
+            <td>No</td>
+        </tr>
+        <tr>
+            <td>Path Of Destruction</td>
+            <td>Drew Karpyshyn</td>
+            <td>450</td>
+            <td>Yes</td>
+        </tr>
     </table>
     <form>
         <label for="book_name">Book Name</label>
@@ -25,7 +37,7 @@
         <input type="text" id="pages"></input>
         <label for="read">Read?</label>
         <input type="text" id="read"></input>
-        <button class="submit_button">Submit</button>
     </form>
+    <button class="submit_button">Submit</button>
 </body>
 </html>
