--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="./script.js" defer></script>
 </head>
 <body>
+    <h1>Library</h1>
     <table class="table">
         <tr>
             <th>Book Name</th>
