--- a/index.html
+++ b/index.html
@@ -30,18 +30,29 @@
         </tr>
     </table>
     <form>
-        <label for="book_name">Book Name</label>
-        <input type="text" id="book_name"></input>
-        <label for="author">Author</label>
-        <input type="text" id="author"></input>
-        <label for="pages">No of Pages</label>
-        <input type="text" id="pages"></input>
+
+        <div class="input_container">
+            <label for="book_name">Book Name</label>
+            <input type="text" id="book_name" size="1"></input>
+        </div>
+        <div class="input_container">
+            <label for="author">Author</label>
+            <input type="text" id="author" size="1"></input>
+        </div>
+        <div class="input_container">
+            <label for="pages">No of Pages</label>
+            <input type="text" id="pages" size="1"></input>
+        </div>
         <fieldset>
-            <legend>Read?</legend>
-                <input type="radio" id="yes" name="read" value="yes" checked>
-                <label for="yes">Yes</label>
-                <input type="radio" id="no" name="read" value="no">
-                <label for="no">No</label>
+            <div class="radio_container">
+                <legend>Read?</legend>
+                    <div class="radio_container">
+                        <input type="radio" id="yes" name="read" value="yes" checked>
+                        <label for="yes">Yes</label>
+                        <input type="radio" id="no" name="read" value="no">
+                        <label for="no">No</label>
+                    </div>
+            </div>
         </fieldset>
     </form>
     <button class="submit_button">Submit</button>
