Change the look and style of the delete button and several other elements.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
         <fieldset>
             <div class="radio_container">
                 <legend>Read?</legend>
-                    <div class="radio_container">
-                        <input type="radio" id="yes" name="read" value="yes" checked>
-                        <label for="yes">Yes</label>
-                        <input type="radio" id="no" name="read" value="no">
-                        <label for="no">No</label>
+                    <div class="radio_options_container">
+                        <div>
+                            <input type="radio" id="yes" name="read" value="yes" checked>
+                            <label for="yes">Yes</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="no" name="read" value="no">
+                            <label for="no">No</label>
+                        </div>
                     </div>
             </div>
         </fieldset>
@@ -58,3 +62,4 @@
     <button class="submit_button">Submit</button>
 </body>
 </html>
+
