--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script type="text/javascript" src="./script.js" defer></script>
 </head>
 <body>
-    <h1>Library</h1>
+    <div class="header_container">
+        <h1>Library</h1>
+        <img src="./img/music-album.png">
+    </div>
     <table class="table">
         <tr>
             <th>Book Name</th>
