Add a few more styling tweaks.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <label for="book_name">Book Name</label>
             <input type="text" id="book_name" size="1"></input>
         </div>
-        <div class="input_container">
+        <div class="author_container">
             <label for="author">Author</label>
             <input type="text" id="author" size="1"></input>
         </div>
