Fix the toggle button so that it works, add some final touches to the css.

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <form>
 
         <div class="input_container">
-            <label for="book_name">Book Name</label>
+            <label for="book_name">Name</label>
             <input type="text" id="book_name" size="1"></input>
         </div>
-        <div class="author_container">
+        <div class="input_container">
             <label for="author">Author</label>
             <input type="text" id="author" size="1"></input>
         </div>
         <div class="input_container">
-            <label for="pages">No of Pages</label>
+            <label for="pages">Pages</label>
             <input type="text" id="pages" size="1"></input>
         </div>
         <fieldset>
@@ -62,7 +62,7 @@
             </div>
         </fieldset>
     </form>
-    <button class="submit_button">Submit</button>
+    <button class="submit_button">Add Book</button>
 </body>
 </html>
 
